--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -15,7 +15,7 @@ jobs:
       - name: python Commands
         run: |
           import platform
-          print (platform.procesorr())
+          print (platform.processor())
         shell: python
 
 
