--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -17,9 +17,10 @@ jobs:
           import platform
           print (platform.processor())
         shell: python
-        
+
   run-windows-command:
     runs-on: windows-latest
+    needs: ['run-shell-command']
     steps:
       - name: Directory Powershell
         run: Get-Location
