--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -6,6 +6,12 @@ jobs:
     run-github-actions:
       runs-on: ubuntu-latest
       steps:
+        - name: Checkout
+          uses: actions/checkout@v3
+        - name: List Files
+          run: |
+            pwd
+            ls -a
         - name: JS Actions
           id: greet
           uses: actions/hello-world-javascript-action@v1
