--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,6 +1,8 @@
 name: Shell Commands
 
-on: [push]
+on: 
+  pull_request:
+    types: [closed, assigned, opened, reopened]
 
 jobs:
   run-shell-command:
