--- a/.github/workflows/create_issue.yml
+++ b/.github/workflows/create_issue.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Create Issue using REST API
         run: |
           curl --request POST \
-          --url https://api.githu.com/repos/${{ github.repository }}/issues \
+          --url https://api.github.com/repos/${{ github.repository }}/issues \
           --header 'authorization:  Bearer ${{ secrets.GITHUB_TOKEN }}' \
           --header  'content-type: application/json' \
           --data '{
